style.css
:root{
    /* font family */
    --font-one: 'Inter', sans-serif;
    --font-two: 'Lexend Deca', sans-serif;
}

.main-part{
    background-color: hsl(233, 47%, 7%);
    height: 60vh;
}

.card {
    background-color: hsl(244, 38%, 16%);
    display: flex;
    flex-direction: row;
    margin: 10% 10% 10% 10%;
    border-radius: 0.5rem;
    
}

.card-header{
    color: hsl(0, 0%, 100%);
    font-family: var(--font-one);
    font-weight: 700;
}
.card-paragraph{
    color: hsla(0, 0%, 100%, 0.75);
    font-family: var(--font-two);
}



.left-section{
    padding: 4rem;
    width: 50%
}

.taglines{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.taglines h3{
    color: hsla(0, 0%, 100%, 0.849);
    font-family: var(--font-one);
}
.taglines p{
    color: gainsboro;
    font-size: 0.8rem;
    font-family: var(--font-two);
}

.right-section{
    width: 50%;
    background: hsl(277, 64%, 61%);
}

.right-section img{
    max-width: 100%;
    height: 100%;
    opacity: 0.5;
}

@media screen and (max-width:768px){
    .card {
        background-color: hsl(244, 38%, 16%);
        display: flex;
        flex-direction: column-reverse;
        margin: 2% 2% 2% 2%;
        
        border-radius: 0.5rem;
        
    }
    .left-section{
        padding: 1rem;
        width: 100%;
        text-align: center;
    }
    .right-section{
        width: 100%;
    }
    .taglines{
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-around;
    }
    .right-section img{
        width: 100%;
        height: 100%;
    }
    
}

